# nimax

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/nimax/: __init__.py  _adapter.py  _cassette.py  _matchers.py  _placeholders.py  _record_mode.py  _serializers.py  _websocket.py  plugin.py
tests/: _utils.py  conftest.py
tests/integration/: test_adapter.py  test_cassette.py  test_websocket.py
tests/plugin/: test_plugin.py
tests/unit/: test_cassette_helpers.py  test_matchers.py  test_placeholders.py  test_record_mode.py  test_serializers.py  test_websocket_models.py
