[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "nimax"
version = "0.1.0"
description = "Record and replay niquests HTTP and WebSocket interactions in pytest"
requires-python = ">=3.11"
dependencies = [
    "niquests>=3",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "PyYAML>=6",
]

[project.entry-points.pytest11]
nimax = "nimax.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/nimax"]
