[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "nimax"
version = "0.1.0"
description = "Record and replay niquests HTTP and WebSocket interactions in pytest"
requires-python = ">=3.11"
dependencies = [
    "niquests>=3",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "websockets>=13",
    "ruff>=0.9",
    "ty>=0.0.1a0",
]

[project.entry-points.pytest11]
nimax = "nimax.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/nimax"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
    # Type-annotation noise
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert OK in tests
    "SLF001",  # private member access OK in tests
    "ARG001",  # unused function args (fixtures)
    "ARG002",  # unused method args (fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["nimax"]

# ── ty ────────────────────────────────────────────────────────────────────────

[tool.ty]
python-version = "3.11"
