[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "nimax"
version = "1.0.0"
description = "Record and replay niquests HTTP and WebSocket interactions in pytest"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adam Logan", email = "adamlogan73@gmail.com" }]
keywords = ["pytest", "niquests", "vcr", "cassette", "http", "websocket", "testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "niquests>=3",
    "PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/adamlogan73/nimax"
Repository = "https://github.com/adamlogan73/nimax"
"Bug Tracker" = "https://github.com/adamlogan73/nimax/issues"

[project.optional-dependencies]
dev = [
    "niquests[ws]>=3",
    "websockets>=13",
    "ruff>=0.9",
    "ty>=0",
    "pytest>=9",
    "pytest-asyncio>=0.24",
]

[project.entry-points.pytest11]
nimax = "nimax.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/nimax"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
    "ANN401",  # Any annotations are legitimate for niquests internals
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert OK in tests
    "SLF001",  # private member access OK in tests
    "ARG001",  # unused function args (fixtures)
    "ARG002",  # unused method args (fixtures)
    "PLR2004", # magic values OK in tests
    "PLC0415", # conditional imports OK in tests (optional deps)
    "ASYNC110", # asyncio.sleep polling OK for cross-thread shutdown coordination
]

[tool.ruff.lint.isort]
known-first-party = ["nimax"]

# ── ty ────────────────────────────────────────────────────────────────────────

[tool.ty]
python-version = "3.11"
